# DEPRECATED---PSoC6VScodeTemplate

./: .gitignore  CMakeLists.txt  README.md
config/cmake/: common.cmake  cypress_peripheral_drivers_library.cmake
config/debug/: CM0_JLink.cfg  CM0_kitprog.cfg  CM4_JLink.cfg  CM4_kitprog.cfg
config/svd/: psoc6_01.svd  psoc6_02.svd
design/CortexM4/: design.modus
design/CortexM4/GeneratedSource/: cycfg.c  cycfg.h  cycfg_connectivity.c  cycfg_connectivity.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.c  cycfg_routing.h
source/CortexM0/: CMakeLists.txt  buildversion.h  main.c
source/CortexM4/: CMakeLists.txt  main.c
